Adiciona opcao de contagem de registros na resposta para paginacao

--- a/Appco.ServiceProtocol.csproj
+++ b/Appco.ServiceProtocol.csproj
@@ -10,6 +10,7 @@
     <PackageIcon>logo-preto.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/almeidaantonio/appco-service-protocol</RepositoryUrl>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
